# conventional-precommit-linter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dangerjs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  pytest.yml
conventional_precommit_linter/: helpers.py  hook.py
tests/: conftest.py  test_custom_args.py  test_default_args.py  test_hook.py
