[project]
name = "conventional_precommit_linter"
version = "1.1.0"
description = "A pre-commit hook that checks commit messages for Conventional Commits formatting."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
keywords = ["git", "pre-commit", "conventional-commits"]
authors = [
    { name = "Tomas Sebestik (Espressif Systems)", email = "tomas.sebestik@espressif.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
code = "https://github.com/espressif/conventional-precommit-linter"
tracker = "https://github.com/espressif/conventional-precommit-linter/issues"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pre-commit",
]

[project.scripts]
conventional-precommit-linter = "conventional_precommit_linter.hook:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]
